--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ scikit-learn==1.6.1
 torch==2.7.1
 transformers==4.54.0
 datasets==2.11.0
+fastapi==0.98.0
+pydantic==1.10.11
+streamlit==1.26.0
+requests==2.31.0
